[package]
name = "typetag-report"
version = "0.1.0"
authors = ["Peter Rong <PeterRong96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "0.1"
# Should you comment out inventory, the project won't compile, yet this is a typetag dependency, not the project's
# inventory = "0.2"
bincode = "1.3.3"